
    HADOOP-12209 Comparable type should be in FileStatus.
    (Yong Zhang via stevel)

    HADOOP-12088. KMSClientProvider uses equalsIgnoreCase("application/json").
    (Brahma Reddy Battula via stevel)

    HADOOP-11797. releasedocmaker.py needs to put ASF headers on output (aw)

    HADOOP-12087. [JDK8] Fix javadoc errors caused by incorrect or illegal
    tags. (Akira AJISAKA via stevel).

    HADOOP-12386. RetryPolicies.RETRY_FOREVER should be able to specify a 
    retry interval. (Sunil G via wangda)

    HADOOP-8436. NPE In getLocalPathForWrite ( path, conf ) when the
    required context item is not configured
    (Brahma Reddy Battula via harsh)

    HADOOP-12252. LocalDirAllocator should not throw NPE with empty string
    configuration. (Zhihai Xu)

    HADOOP-11918. Listing an empty s3a root directory throws FileNotFound.
    (Lei (Eddy) Xu via cnauroth)

    HADOOP-12440. TestRPC#testRPCServerShutdown did not produce the desired
    thread states before shutting down. (Xiao Chen via mingma)

    HADOOP-12447. Clean up some htrace integration issues (cmccabe)

    HADOOP-12448. TestTextCommand: use mkdirs rather than mkdir to create test
    directory. (Contributed by Colin Patrick McCabe and Chris Nauroth)

    HADOOP-10296. Incorrect null check in SwiftRestClient#buildException().
    (Rahul Palamuttam and Kanaka Kumar Avvaru via aajisaka)

    HADOOP-8437. getLocalPathForWrite should throw IOException for invalid
    paths. (Brahma Reddy Battula via zxu)

    HADOOP-11098. [JDK8] Max Non Heap Memory default changed between JDK7
    and 8. (ozawa)

    HADOOP-12284. UserGroupInformation doAs can throw misleading exception
    (Aaron Dosset via stevel)

    HADOOP-12449. TestDNS and TestNetUtils failing if no network. (stevel)

    HADOOP-11515. Upgrade jsch lib to jsch-0.1.51 to avoid problems running
    on java7. (stevel and ozawa)

    HADOOP-12478. Shell.getWinUtilsPath() has been renamed
    Shell.getWinutilsPath(). (stevel)
