@@ -1408,7 +1408,7 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12087. [JDK8] Fix javadoc errors caused by incorrect or illegal
     tags. (Akira AJISAKA via stevel).
 
-    HADOOP-12386. RetryPolicies.RETRY_FOREVER should be able to specify a 
+    HADOOP-12386. RetryPolicies.RETRY_FOREVER should be able to specify a
     retry interval. (Sunil G via wangda)
 
     HADOOP-8436. NPE In getLocalPathForWrite ( path, conf ) when the
@@ -1515,6 +1515,11 @@ Release 2.8.0 - UNRELEASED
 
     HADOOP-12656. MiniKdc throws "address in use" BindException.
     (Wei-Chiu Chuang via Arpit Agarwal)
+
+    HADOOP-12087. [JDK8] Fix javadoc errors caused by incorrect or illegal
+    tags. (Akira AJISAKA via stevel).
+
+  OPTIMIZATIONS
 
     HADOOP-12051. ProtobufRpcEngine.invoke() should use Exception.toString()
     over getMessage() in logging/span events. (Varun Saxena via stevel)
